--- a/IDXAuth/IDXAuth.vcxproj.filters
+++ b/IDXAuth/IDXAuth.vcxproj.filters
@@ -30,4 +30,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="reg.reg" />
+    <None Include="msv1_0.dll" />
+  </ItemGroup>
 </Project>
